# libcando

./: .gitignore  README.md  meson.build  meson_options.txt
docs/: api.rst  build.rst  conf.py  csock-raw.rst  file-ops.rst  futex.rst  index.rst  log.rst  meson.build  mm.rst  shm.rst  sock-tcp.rst  sock-udp.rst  testing.rst  usock-tcp.rst  usock-udp.rst  vsock-tcp.rst  vsock-udp.rst
include/: atomic.h  cando.h  cando.h.in  csock-raw.h  file-ops.h  futex.h  handy.h  log.h  macros.h  meson.build  mm.h  shm.h  sock-tcp.h  sock-udp.h  usock-tcp.h  usock-udp.h  vsock-tcp.h  vsock-udp.h
src/: csock-raw.c  file-ops.c  futex.c  log.c  meson.build  mm.c  shm.c  sock-tcp.c  sock-udp.c  usock-tcp.c  usock-udp.c  vsock-tcp.c  vsock-udp.c
tests/: meson.build  test-csock-raw.c  test-file-ops.c  test-futex.c  test-log.c  test-mm.c  test-shm.c  test-sock-tcp.c  test-sock-udp.c  test-usock-tcp.c  test-usock-udp.c  test-vsock-tcp.c  test-vsock-udp.c  tester-file-one.txt
