option('tests',
      type: 'boolean', value: false,
      description: 'Build tests')

option('docs',
      type: 'boolean', value: false,
      description: 'Build documentation')

option('file-ops',
       type: 'feature', value: 'disabled',
       description: 'Build with file-operations support')

option('vsock-tcp',
       type: 'feature', value: 'disabled',
       description: 'Build with vm socket-tcp support')

option('vsock-udp',
       type: 'feature', value: 'disabled',
       description: 'Build with vm socket-udp support')
