option('tests',
	type: 'boolean', value: false,
	description: 'Build tests')

option('docs',
	type: 'boolean', value: false,
	description: 'Build documentation')

option('file-offset-bits',
	type: 'integer', value: 64,
	description: 'Sets the _FILE_OFFSET_BITS macro')

option('file-ops',
	type: 'feature', value: 'disabled',
	description: 'Build with file-operations support')

option('shm',
	type: 'feature', value: 'disabled',
	description: 'Build with shared memory support')

option('sock-tcp',
	type: 'feature', value: 'disabled',
	description: 'Build with socket-tcp support')

option('sock-udp',
	type: 'feature', value: 'disabled',
	description: 'Build with socket-udp support')

option('usock-tcp',
	type: 'feature', value: 'disabled',
	description: 'Build with unix socket-tcp support')

option('vsock-tcp',
	type: 'feature', value: 'disabled',
	description: 'Build with vm socket-tcp support')

option('vsock-udp',
	type: 'feature', value: 'disabled',
	description: 'Build with vm socket-udp support')
